--- a/asset/scss/_mixin.scss
+++ b/asset/scss/_mixin.scss
@@ -50,6 +50,10 @@
         width: 350px !important;
     }
 
+    .yot-overlay-mid-container-form-600{
+        width: 600px !important;
+    }
+
     // Don't Remove Top
     .overlayLeftSideBar{
         display: none !important;
