--- a/asset/scss/_index.scss
+++ b/asset/scss/_index.scss
@@ -5,11 +5,11 @@
     left: 0;
     z-index: -1;
 
-    height: 500px;
+    height: 400px;
 
     background: url(../images/hero-bg.jpg);
     /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
 }
