--- a/asset/scss/style.css
+++ b/asset/scss/style.css
@@ -1772,10 +1772,10 @@ i {
   right: 0;
   left: 0;
   z-index: -1;
-  height: 500px;
+  height: 400px;
   background: url(../images/hero-bg.jpg);
   /* Center and scale the image nicely */
   background-position: center;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
 }/*# sourceMappingURL=style.css.map */
