--- a/asset/scss/_mixin.scss
+++ b/asset/scss/_mixin.scss
@@ -33,6 +33,12 @@
     .over-view-overlay-mobile{
         width: 41.66% !important;
     }
+
+    .gallery-page-mage-container{
+        img{
+            width:400px !important;
+        }
+    }
 }
 
                                 /* 992px */
