--- a/asset/scss/style.css
+++ b/asset/scss/style.css
@@ -54,6 +54,9 @@
   .over-view-overlay-mobile {
     width: 41.66% !important;
   }
+  .gallery-page-mage-container img {
+    width: 400px !important;
+  }
 }
 /* 992px */
 @media only screen and (min-width: 62em) { /* Large devices (laptops/desktops) */
