--- a/asset/scss/_variable.scss
+++ b/asset/scss/_variable.scss
@@ -11,6 +11,8 @@ $yot-blue3:hsl(200, 100%, 28%);
 
 $yot-pink1:hsl(343, 93%, 49%);
 
+$yot-yellow1:hsl(35, 97%, 63%);
+
 //Neutral Colors
 $yot-white:hsl(0, 0%, 100%);
 $yot-black:hsl(0, 0%, 0%);
