--- a/asset/scss/_mixin.scss
+++ b/asset/scss/_mixin.scss
@@ -22,6 +22,10 @@
     .yot-flex-tab{
         display: flex;
     }
+
+    .yot-overlay-mid-container-form-tablet-size-up{
+        width: 720px !important;
+    }
     
     // Don't Remove Top
     .over-view-container{
@@ -56,8 +60,8 @@
         width: 350px !important;
     }
 
-    .yot-overlay-mid-container-form-600{
-        width: 600px !important;
+    .yot-overlay-mid-container-form-tablet-size-up{
+        width: 960px !important;
     }
 
     // Don't Remove Top
