--- a/asset/scss/style.css
+++ b/asset/scss/style.css
@@ -46,6 +46,9 @@
   .yot-flex-tab {
     display: flex;
   }
+  .yot-overlay-mid-container-form-tablet-size-up {
+    width: 720px !important;
+  }
   .over-view-container {
     display: grid;
     grid-template-columns: 50% 50%;
@@ -70,8 +73,8 @@
     top: 20px !important;
     width: 350px !important;
   }
-  .yot-overlay-mid-container-form-600 {
-    width: 600px !important;
+  .yot-overlay-mid-container-form-tablet-size-up {
+    width: 960px !important;
   }
   .overlayLeftSideBar {
     display: none !important;
@@ -1785,4 +1788,9 @@ i {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.pp-table-images img {
+  width: 150px !important;
+  height: 150px !important;
 }/*# sourceMappingURL=style.css.map */
