--- a/asset/scss/_yot-overlay.scss
+++ b/asset/scss/_yot-overlay.scss
@@ -1,3 +1,7 @@
+// .yot-overlay-mid-container-form-tablet-size-up{
+//     height: 500px;
+// }
+
 // Main Bg
 .yot-overlay-bg-trans{
     position: fixed;
