--- a/asset/scss/_yot-img-shape.scss
+++ b/asset/scss/_yot-img-shape.scss
@@ -1,7 +1,15 @@
-.yot-img-circle{
+.yot-img-circle-64{
     img{
         border-radius: 50%;
-        width: 73px;
-        height: 71px;
+        width: 64px;
+        height: 64px;
+    }
+}
+
+.yot-img-circle-128{
+    img{
+        border-radius: 50%;
+        width: 128px;
+        height: 128px;
     }
 }
