--- a/asset/scss/style.css
+++ b/asset/scss/style.css
@@ -957,10 +957,16 @@ i {
   letter-spacing: 3px;
 }
 
-.yot-img-circle img {
+.yot-img-circle-64 img {
   border-radius: 50%;
-  width: 73px;
-  height: 71px;
+  width: 64px;
+  height: 64px;
+}
+
+.yot-img-circle-128 img {
+  border-radius: 50%;
+  width: 128px;
+  height: 128px;
 }
 
 .yot-lsp-1 {
