--- a/asset/scss/_mixin.scss
+++ b/asset/scss/_mixin.scss
@@ -26,6 +26,10 @@
     .yot-overlay-mid-container-form-tablet-size-up{
         width: 720px !important;
     }
+
+    .yot-form-container{
+        width: 400px !important;
+    }
     
     // Don't Remove Top
     .over-view-container{
