--- a/asset/scss/_yot-loader.scss
+++ b/asset/scss/_yot-loader.scss
@@ -1,7 +1,7 @@
-.yot-loader{
+.yot-loader-blue1{
     border: 5px solid $yot-white;
     border-radius: 50%;
-    border-top: 5px solid $yot-orange;
+    border-top: 5px solid $yot-blue1;
     width: 24px;
     height: 24px;
     -webkit-animation: spin 2s linear infinite; /* Safari */
