--- a/asset/scss/style.scss
+++ b/asset/scss/style.scss
@@ -48,4 +48,5 @@
 @import 'ready-to-print.scss';
 @import 'index.scss';
 @import 'product-page.scss';
-@import 'user-my-cart.scss'
+@import 'user-my-cart.scss';
+@import 'user-my-order.scss';
