--- a/asset/scss/style.css
+++ b/asset/scss/style.css
@@ -1823,4 +1823,18 @@ i {
   height: 500px;
   overflow-y: auto;
   margin: auto;
+}
+
+.point-arrow-top::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 50%; /* center the triangle horizontally */
+  transform: translateX(-50%) translateY(-100%) rotate(45deg); /* position and rotate the triangle */
+  width: 0;
+  height: 0;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid #ccc; /* match the div's background color */
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
 }/*# sourceMappingURL=style.css.map */
